src/objects/Festivos__c.object
<CustomObject>
    <fields>
        <fullName>FES_CAS_Procesado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procesado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FES_DAT_Fecha__c</fullName>
        <label>Fecha</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FES_LKP_Territorio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territorio</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Festivos</relationshipLabel>
        <relationshipName>Festivos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FES_SEL_Provincia__c</fullName>
        <label>Provincia</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Provincias</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FES_SEL_Tipo_de_Festivo__c</fullName>
        <label>Tipo de Festivo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nacional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FES_TXT_Identificador__c</fullName>
        <description>Identificador único del Festivo</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Festivo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FES_DAT_Fecha__c</columns>
        <columns>FES_SEL_Tipo_de_Festivo__c</columns>
        <columns>FES_LKP_Territorio__c</columns>
        <columns>FES_SEL_Provincia__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Festivo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festivos</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(FES_TXT_Identificador__c ))),ISCHANGED(FES_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK(FES_TXT_Identificador__c),ISNULL( FES_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>FES_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>